@@ -1,3 +1,8 @@
+2007-12-12  Mike Kestner  <mkestner@novell.com>
+
+	* generator/Parameters.cs: fix marshaling for ArrayCount params where
+	casting is required, like gsize/size_t count parameters.
+
 2007-12-11  Mike Kestner  <mkestner@novell.com>
 
 	* parser/gapi2xml.pl: fix tightloop in single-line prop declarations.
